# telegrind

./: .env.dist  .gitignore  Dockerfile  Pipfile  README.md  compose.yml  docker-compose.yml  main.py  pyproject.toml
.zed/: settings.json
telegrind/: handlers.py  models.py  sheets.py  transaction.py
telegrind/bot/: const.py  middleware.py  setup.py
telegrind/bot/handlers/: __init__.py  handlers.py  start.py
telegrind/services/: expense.py
