[project]
name = "telegrind"
version = "0.1.0"
description = "Your private telemetry through telegram chat"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "asyncpg>=0.30.0",
    "dateparser>=1.2.2",
    "gspread-asyncio>=2.0.0",
    "marvin>=3.2.2",
    "pycountry>=24.6.1",
    "pydantic-extra-types>=2.10.6",
    "python-dotenv>=1.1.1",
    "sqlalchemy[asyncio]>=2.0.44",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "ruff>=0.14.8",
]

# Ruff configuration
[tool.ruff]
# Set the maximum line length to match Black's default
line-length = 88

# Assume Python 3.12+
target-version = "py312"

# Enable specific rule sets
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]

# Ignore specific rules if needed
# https://docs.astral.sh/ruff/linter/#error-suppression
lint.ignore = [
    "S101",  # Use of assert (common in tests)
]

# Directories to exclude from linting
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Configure the formatter
[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Automatically detect line ending
line-ending = "auto"

# Configure import sorting
[tool.ruff.lint.isort]
known-first-party = ["telegrind"]
